remove extra files

--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -13,5 +13,5 @@
   {% include '_favicons.html' %}
 
   <!-- CSS -->
-  <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150603'> rel='stylesheet' type='text/css'/>
 </head>
