--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -1,9 +1,7 @@
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
   <title>{{ title }} | {{ site.name }}</title>
-
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='{{ site.keywords | join(", ") }}{% if tags %}, {{ tags | join(", ") }}{% endif %}'/>
   {% if description %}<meta name='description' content='{{ description }}'/>
@@ -13,5 +11,5 @@
   {% include '_favicons.html' %}
 
   <!-- CSS -->
-  <link href='/assets/styles.css?v=20150603'> rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150603' rel='stylesheet' type='text/css'/>
 </head>
