--- a/templates/index.html
+++ b/templates/index.html
@@ -151,9 +151,9 @@
         </a>
         </div>
       </li>
-      <!--       <li>
+      <li>
         <a href='{{ speakers.speaker9.url }}' target='new'>
-          <img src='/images/speakers/0.jpg' />
+          <img src='/images/speakers/9.jpg' />
           <div class='cover'>
             <div class='info'>
               <h4>{{ speakers.speaker9.name }}</h4>
@@ -161,7 +161,7 @@
             </div>
         </a>
         </div>
-      </li> -->
+      </li>
       <li>
         <a href='{{ speakers.speaker10.url }}' target='new'>
           <img src='/images/speakers/10.jpg' />
@@ -303,8 +303,8 @@
       <a class='button buyticket'>{{ button.content }}<span>{{ button.placeholder }}</span></a>
     </div>
   </section>
-  <!-- sponsers-->
-  <section class='section sponsers' id='item4'>
+  <!-- sponsors-->
+  <section class='section sponsors' id='item4'>
     <div class='title'>
       <h1>{{ menu.item4 }}</h1>
     </div>
@@ -358,6 +358,12 @@
         </li>
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
+        </li>
+                <li>
+          <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
+        </li>
+                <li>
+          <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
     </div>
