--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1914,7 +1914,7 @@ input:not([type=submit]), textarea {
   .index-launch #header-new {
     min-height: 550px; }
     .index-launch #header-new .hero {
-      background: url('../images/header.jpg') no-repeat 0 0 !important;
+      background: url('../images/header.jpg?') no-repeat 0 0 !important;
       -webkit-background-size: cover !important;
       -moz-background-size: cover !important;
       -o-background-size: cover !important;
@@ -1928,8 +1928,9 @@ input:not([type=submit]), textarea {
         .index-launch #header-new .hero .wrapper h1 {
           font-size: 50px;
           font-size: 5rem;
+          font-weight: 700;
           letter-spacing: 15px !important;
-          font-weight: 700; }
+          text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
           .index-launch #header-new .hero .wrapper h1:before {
             font-size: 130px;
             font-size: 13rem; }
@@ -2393,7 +2394,7 @@ input:not([type=submit]), textarea {
     /* About */
     /* Speakers */
     /* Schedule */
-    /* Sponsers & Mediaparter */
+    /* Sponsors & Mediaparter */
     /* venue */ }
     .index-launch .section .title {
       float: left;
@@ -2401,7 +2402,6 @@ input:not([type=submit]), textarea {
       width: 100%; }
       .index-launch .section .title h1 {
         color: #333;
-        font-weight: normal;
         font-size: 36px;
         font-size: 3.6rem;
         letter-spacing: 3px;
@@ -2663,21 +2663,21 @@ input:not([type=submit]), textarea {
         @media only screen and (max-width: 768px) {
           .index-launch .section.schedule .wrapper .list {
             width: 100%; } }
-    .index-launch .section.sponsers ul, .index-launch .section.mediaparter ul {
+    .index-launch .section.sponsors ul, .index-launch .section.mediaparter ul {
       margin: 0px;
       text-align: center;
       width: 100%; }
-      .index-launch .section.sponsers ul li, .index-launch .section.mediaparter ul li {
+      .index-launch .section.sponsors ul li, .index-launch .section.mediaparter ul li {
         display: inline-block;
         height: 100px;
         position: relative;
         padding: 10px 8px;
         margin-bottom: 40px;
         width: 300px; }
-        .index-launch .section.sponsers ul li a, .index-launch .section.mediaparter ul li a {
+        .index-launch .section.sponsors ul li a, .index-launch .section.mediaparter ul li a {
           float: left;
           width: 100%; }
-          .index-launch .section.sponsers ul li a img, .index-launch .section.mediaparter ul li a img {
+          .index-launch .section.sponsors ul li a img, .index-launch .section.mediaparter ul li a img {
             bottom: 0px;
             position: absolute;
             left: 0px;
@@ -2687,11 +2687,11 @@ input:not([type=submit]), textarea {
             -webkit-transition: all, 0.2s, ease;
             -moz-transition: all, 0.2s, ease;
             transition: all, 0.2s, ease; }
-            .index-launch .section.sponsers ul li a img:hover, .index-launch .section.mediaparter ul li a img:hover {
+            .index-launch .section.sponsors ul li a img:hover, .index-launch .section.mediaparter ul li a img:hover {
               opacity: 0.9;
               -webkit-filter: grayscale(0);
               filter: grayscale(0); }
-    .index-launch .section.sponsers {
+    .index-launch .section.sponsors {
       padding-bottom: 0px; }
     .index-launch .section.venue {
       position: relative;
