fixed the link for jinshuju.net

--- a/templates/index.html
+++ b/templates/index.html
@@ -451,7 +451,7 @@
           <a href='http://www.upyun.com/' target='new'><img src='/images/upyun.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://www.jinshuju.com/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
+          <a href='http://www.jinshuju.net/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
         </li>
       </ul>
     </div>
